<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_box_top_corner_white">

    <!-- Confetti Animation View - positioned absolutely to cover content -->
    <co.dailybook.keep.screen.home.fragment.ConfettiView
        android:id="@+id/confetti_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_box_top_corner_white" />

    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_24">

        <!-- DailyBook Logo -->
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:src="@drawable/ic_dailybook_logo"
            android:contentDescription="@string/app_name" />

        <!-- Headline -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refer_headline"
            android:textColor="@color/text_20_color"
            android:gravity="center"
            style="@style/textview_bold_48"
            android:textSize="@dimen/text_size_36"
            android:layout_marginBottom="@dimen/margin_12" />

        <!-- Thank You Message -->
        <co.dailybook.boilerplate.uikit.views.textviews.text16.TextViewRegular16
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_refer_message"
            android:textColor="@color/text_20_color"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_32" />

        <co.dailybook.boilerplate.uikit.views.textviews.text16.TextViewBoldGreen16
            android:id="@+id/btn_share_whatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refer_a_friend"
            android:background="@drawable/rounded_share_bg"
            android:drawableStart="@drawable/ic_whatsapp"
            android:drawableEnd="@drawable/ic_empty"
            android:padding="@dimen/margin_12"
            android:gravity="center"/>

    </LinearLayout>
</FrameLayout>
