<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_12"
        android:layout_marginVertical="@dimen/margin_8"
        android:background="@drawable/circle_bg_white"
        android:contentDescription="@string/close"
        android:padding="@dimen/margin_8"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/cl_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_edittext_background_16"
        android:paddingBottom="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close">

        <com.boilerplate.uikit.views.textviews.text18.TextViewBold18
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/overtime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title" />

        <!-- Hours label -->
        <com.boilerplate.uikit.views.textviews.text12.TextViewHintRegular12
            android:id="@+id/tv_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/hours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <EditText
            android:id="@+id/et_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/rounded_filled_edittext_background_100"
            android:hint="@string/_00_00_hrs"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/text_14"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintTop_toBottomOf="@id/tv_hours_label"/>

        <!-- Rate label -->
        <com.boilerplate.uikit.views.textviews.text12.TextViewHintRegular12
            android:id="@+id/tv_rate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/overtime_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_hours"/>

        <EditText
            android:id="@+id/et_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/rounded_filled_edittext_background_100"
            android:hint="@string/enter_overtime_rate"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/text_14"
            android:inputType="numberDecimal"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintTop_toBottomOf="@id/tv_rate_label"/>

        <LinearLayout
            android:id="@+id/ll_total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/et_rate">

            <com.boilerplate.uikit.views.textviews.text16.TextViewBold16
                android:id="@+id/tv_total_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_overtime_amount"/>

            <com.boilerplate.uikit.views.textviews.text16.TextViewBold16
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹0"/>
        </LinearLayout>

        <View
            android:id="@+id/divider_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_24"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@+id/ll_total_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_remove_ot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_13"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:text="@string/remove_overtime"
            android:textColor="@color/color_primary"
            android:background="@drawable/rounded_border_button_color_primary_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_button"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <com.boilerplate.uikit.views.buttons.PrimaryButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/ok"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_remove_ot"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@id/divider_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
